# python-web-development-project-lvl4

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
task_manager/: settings.py
